[package]
name = "sortfs"
version = "0.1.0"
authors = ["Jason Yu <jasonyu.kr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
num_cpus = "1.0"
rayon = "1.10"
ignore = "0.4.23"
lscolors = "0.20.0"

ansi_term = { version = "0.12", optional = true }
nu-ansi-term = { version = "0.50", optional = true }
crossterm = { version = "0.28", optional = true }
owo-colors = { version = "4.0", optional = true }
aho-corasick = "1.1.3"

